--- a/AdventOfCode2022.csproj
+++ b/AdventOfCode2022.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Day1\Day1.cs" />
+    <Compile Include="Day2\Day2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -52,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Day1\input.txt" />
+    <Content Include="Day2\input.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
